package sase.multi.algo;

public enum AlgoUnitTypes {
	ORDER,
	TREE
}
